Avoid page breaks in .note

--- a/css/print.css
+++ b/css/print.css
@@ -103,6 +103,7 @@ ul,
   widows: 3;
 }
 
+.note,
 .thumb
 {
   page-break-inside: avoid;
